syntax = "proto3";

package user;

option go_package = ".;proto";

import "google/api/annotations.proto";
import "common.proto";

service UserService {
  rpc GetAllUsers (common.Empty) returns (GetAllUsersResponse) {
    option (google.api.http) = {
      get: "/users"
    };
  }
  rpc GetUserByID (GetUserByIDRequest) returns (GetUserByIDResponse) {
    option (google.api.http) = {
      get: "/users/{id}"
    };
  }
  rpc GetUserByEmail (GetUserByEmailRequest) returns (GetUserByEmailResponse) {
    option (google.api.http) = {
      get: "/users/email/{email}"
    };
  }
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      patch: "/users/{id}"
      body: "*"
    };
  }
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      delete: "/users/{id}"
    };
  }
}

message User {
  uint64 id = 1;
  string full_name = 2;
  string email = 3;
  bool verified = 4;
}

// Request message
message GetUserByIDRequest {
  uint64 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message CreateUserRequest {
  string full_name = 1;
  string email = 2;
  bool verified = 3;
  string hashed_password = 4;
  string hashed_refresh_token = 5;
}

message UpdateUserRequest {
  uint64 id = 1;
  string full_name = 2;
  string email = 3;
  bool verified = 4;
  string hashed_password = 5;
  string hashed_refresh_token = 6;
}

message DeleteUserRequest {
  uint64 id = 1;
}

// Response message
message CreateUserResponse {
  User user = 1;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserResponse {
  User user = 1;
}